--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --background: 160 12% 95%;
+  .light {
+    --background: 220 12% 94.5%;
     --foreground: 222.2 84% 4.9%;
 
     --hover: 100 50% 20%;
@@ -18,7 +18,7 @@
     --card: 0 0% 98%;
     --card-foreground: 222.2 84% 4.9%;
 
-    --border: 214.3 31.8% 88.4%;
+    --border: 214.3 10.8% 86.4%;
     --input: 214.3 31.8% 91.4%;
 
     --primary: 222.2 47.4% 11.2%;
@@ -37,9 +37,10 @@
 
     --radius: 0.5rem;
 
-    --userPrimary: var(--color-primary-600);
+    --userLight: var(--color-primary-500);
+    --userMedium: var(--color-primary-600);
+    --userDark: var(--color-primary-800);
   }
-
   .dark {
     --background: 230.2 40% 5.9%;
     --foreground: 210 40% 98%;
@@ -72,7 +73,7 @@
 
     --ring: 217.2 32.6% 17.5%;
 
-    --userLight: var(--color-primary-400);
+    --userLight: var(--color-primary-500);
     --userMedium: var(--color-primary-600);
     --userDark: var(--color-primary-800);
   }
