added unread message functionality to show the user which channels have unread messages

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
+  :root,
+  .light {
     --background: 220 12% 94.5%;
     --foreground: 222.2 84% 4.9%;
 
