reworking app color scheme

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,13 +5,13 @@
 @layer base {
   :root,
   .light {
-    --background: 220 20% 93%;
+    --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
     --scrollbarThumb: 230.2 20% 83%;
     --scrollbarTrack: 230.2 20% 88%;
 
-    --hover: 100 50% 20%;
+    --hover: 0 0% 97%;
 
     --muted: 210% 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
@@ -42,23 +42,35 @@
 
     --radius: 0.5rem;
 
-    --userLighter: var(--color-primary-400);
-    --userLight: var(--color-primary-500);
-    --userMedium: var(--color-primary-600);
-    --userDark: var(--color-primary-700);
+    --primary-lightest: var(--color-primary-100);
+    --primary-lighter: var(--color-primary-400);
+    --primary-light: var(--color-primary-500);
+    --primary: var(--color-primary-600);
+    --primary-dark: var(--color-primary-700);
+    --primary-darkest: var(--color-primary-800);
+
+    --primary-text: var(--color-primary-700);
+    --primary-hover: var(--color-primary-100);
+    --primary-active: var(--color-primary-800);
 
     --text-neutral: 220 25% 53%;
+
+    --secondary-text: 0 0% 20%;
+
+    --text-main: 0 0% 28%;
+
+    --text-muted: 0 0% 40%;
 
     --border-neutral: 220 35% 80%;
   }
   .dark {
-    --background: 230.2 25% 7%;
+    --background: 216, 11%, 18%;
     --foreground: 210 40% 98%;
 
     --scrollbarThumb: 230.2 25% 17%;
     --scrollbarTrack: 230.2 25% 12%;
 
-    --hover: 230.2 25% 10%;
+    --hover: 216, 11%, 15%;
 
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
@@ -66,16 +78,16 @@
     --popover: 222.2 84% 10.9%;
     --popover-foreground: 210 40% 98%;
 
-    --card: 230.2 25% 15.5%;
+    --card: 216, 11%, 10%;
     --card-foreground: 210 40% 98%;
 
-    --border: 217.2 32.6% 13%;
+    --border: 216, 11%, 27%;
     --input: 217.2 32.6% 17.5%;
 
-    --primary: 210 40% 98%;
+    --primary: 225, 9%, 91%;
     --primary-foreground: 222.2 47.4% 11.2%;
 
-    --secondary: 217.2 28.6% 19.5%;
+    --secondary: 216, 11%, 28%;
     --secondary-hover: 220 28% 17.1%;
     --secondary-foreground: 210 40% 98%;
 
@@ -87,10 +99,20 @@
 
     --ring: 217.2 32.6% 17.5%;
 
-    --userLighter: var(--color-primary-400);
-    --userLight: var(--color-primary-500);
-    --userMedium: var(--color-primary-600);
-    --userDark: var(--color-primary-700);
+    --primary-lightest: var(--color-primary-200);
+    --primary-lighter: var(--color-primary-400);
+    --primary-light: var(--color-primary-500);
+    --primary: var(--color-primary-600);
+    --primary-dark: var(--color-primary-700);
+    --primary-darkest: var(--color-primary-800);
+
+    --primary-text: var(--color-primary-100);
+    --primary-active: var(--color-primary-800);
+    --primary-hover: var(--color-primary-100);
+
+    --secondary-text: 0 0% 90%;
+
+    --text-main: 0 0% 85%;
 
     --text-neutral: 220 25% 70%;
 
@@ -110,6 +132,7 @@
     --color-primary-700: theme('colors.slate.700');
     --color-primary-800: theme('colors.slate.800');
     --color-primary-900: theme('colors.slate.900');
+    --color-primary-hover: `${theme('colors.slate.500')}AA`
   }
   .red {
     --color-primary-50: theme('colors.red.50');
@@ -317,6 +340,6 @@
   }
 
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-main;
   }
 }
